# dsl25-8-llm-programs

./: .gitignore  LICENSE  README.md  pyproject.toml
Vagent_examples/: program.py  program_structured_output.py  structured_output.py  titanic.py  tool.py
data/clauses/: manual_clauses  synthetic_clauses.json
data/contracts/synth/docs_n10_seed42/synth_contract_000/: synth_contract_000.descr.md  synth_contract_000.info.md  synth_contract_000.md
data/contracts/synth/docs_n10_seed42/synth_contract_001/: synth_contract_001.descr.md  synth_contract_001.info.md  synth_contract_001.md
data/contracts/synth/docs_n10_seed42/synth_contract_002/: synth_contract_002.descr.md  synth_contract_002.info.md  synth_contract_002.md
notebooks/: sample.ipynb
notebooks/abstractions/: clarissa_complete.txt  generalized-extraction.ipynb
notebooks/exploratory/: contract_generation_classification_experiments.ipynb  contract_generation_experiments.ipynb  redaction_experiments.ipynb  table_cleaning.ipynb
notebooks/reports/tasks/: redaction.ipynb
src/llm_programs/: __init__.py  utils.py
src/llm_programs/programs/: __init__.py  collection.py  types.py
src/llm_programs/programs/base/: __init__.py  base.py  gemini.py  locallm.py
src/llm_programs/programs/collection/: collection.py
src/llm_programs/tasks/: complete_pipeline.py
src/llm_programs/tasks/classification/: detect_ai_mentions.ipynb  keyword_stats.ipynb  synthetic_para.ipynb
src/llm_programs/tasks/para_retrieval/: segment_markdown.ipynb
src/llm_programs/tasks/redaction/: baseline.py  eval.py  metrics.py  templates.py
(+29 files in other folders)
