[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_programs"
version = "0.1"
description = "LLM Program Blueprints"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Severin Bratus", email = "sbratus@ethz.ch"}
]
dependencies = [
    # "numpy>=1.20.0",
    # "pandas>=1.3.0",
    "google-generativeai"
    "bitsandbytes",
    "accelerate",
    "v-agents",
    "transformers",
]

[project.optional-dependencies]
dev = [
    # "pytest>=7.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]