[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_programs"
version = "0.1"
description = "LLM Program Blueprints"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Severin Bratus", email = "sbratus@ethz.ch"},
    {name = "Youseff Chorfi", email = "ychorfi@ethz.ch"},
    {name = "Saad Assaoui", email = "sassaoui@ethz.ch"}
]
dependencies = [
    # "numpy>=1.20.0",
    # "pandas>=1.3.0",
    "fire",
    "google-generativeai",
    "bitsandbytes",
    "accelerate",
    "v-agents",
    "transformers",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    # "pytest>=7.0.0",
    "ipykernel",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]